# sdlsprite

./: .gitignore  CMakeLists.txt  README.md
src/: BasicView.cpp  BasicView.h  View.cpp  View.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/core/: BBox.h  Clickable.h  Component.h  Drawable.h  GameObject.cpp  GameObject.h  Movable.h  Positionable.cpp  Positionable.h  Rotatable.h  TimeDependent.h  Transform.cpp  Transform.h
src/exceptions/: CreateTextureError.h  ResourceNotFoundError.h
src/utils/: Units.h  Vector2.h  maths.cpp  maths.h  uuid.cpp  uuid.h
src/visual/: Animation.cpp  Animation.h  Sprite.cpp  Sprite.h
src/visual/shapes/: Circle.cpp  Circle.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.h
src/visual/texture/: TextureBuffer.cpp  TextureBuffer.h  TextureClip.cpp  TextureClip.h
